# 3ds-homebrew-ci

./: .travis.yml  CMakeLists.txt  README.md  circle.yml  travisscript.sh
.circleci/: config.yml
.circleci/images/primary/: Dockerfile
include/: library.h
source/: library.cpp
tests/: main.cpp  test.cpp
